Move `java.ext.dirs` from params to gradle script.
Signed-off-by: arvindkandhare <arvind.kandhare@emc.com>